2004-10-26  Guillem Jover  <guillem@hadrons.org>

	* i386/i386/fpe.b: Remove binary without source.
	* i386/i386/fpe.b_elf: Likewise.
	* i386/i386/fpe_linkage.c: Disable the code if [! FPE].
	* i386/bogus/fpe.h: Add comment about not having an fpe implementation.
	* i386/Makefrag (objfiles): Do not add fpe.o.
	Remove targets to generate fpe.o.

2004-02-29  Marcus Brinkmann  <marcus@gnu.org>

	* NEWS: Add things that changed so far since 1.3.

2004-02-02  Marco Gerards  <metgerards@student.han.nl>

	* i386/i386at/kd.c (kdinit): Initialize the input buffer.

	* i386/i386at/kd.h (KDSETLEDS): New macro.
	* i386/i386at/kd_event.c (kbdsetstat): Handle KDSETLEDS here to
	set the keyboard LEDs state.

2004-01-19  Marco Gerards  <metgerards@student.han.nl>

        * linux/dev/glue/block.c (init_partition): Don't check for BSD
        partitions if the DOS partition is too small.

2004-01-16  Marco Gerards  <metgerards@student.han.nl>

	* linux/dev/glue/block.c (device_get_status): Correctly calculate
	the number of blocks.

2004-01-15  Alfred M. Szmidt  <ams@kemisten.nu>

	* linux/dev/include/asm-i386/string.h (memscan): Don't use
	multi-line string literals for asm().
	* linux/dev/include/asm-i386/segment.h (__generic_memcpy_tofs)
	(__generic_memcpy_fromfs): Likewise.
	* linux/src/include/asm-i386/floppy.h (floppy_hardint): Likewise.
	* i386/i386/proc_reg.h (flush_instr_queue): Likewise.
	* i386/i386/gdt.c (gdt_init): Likewise.

	* linux/src/drivers/scsi/aic7xxx.c: Updated from Linux 2.0.39
	* linux/src/drivers/scsi/aic7xxx.h: Likewise.
	* linux/src/drivers/scsi/aic7xxx_proc.c: Likewise.
	* linux/src/drivers/scsi/scsicam.c: Likewise.
	* linux/src/include/linux/pci.h: Likewise.

	* linux/src/drivers/scsi/53c7,8xx.h (patch_dsa_32): Don't use
	token paste operator (##).

	* Makefile.in (kernel-undef): Match new output format from
	nm (binutils) 2.14.x.

2002-05-27  Roland McGrath  <roland@frob.com>

	* Version 1.3 released.

2002-05-23  Marcus Brinkmann  <marcus@gnu.org>
